egress-external-https-proxy-integration/tls-passthrough-mtls/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - external-app.corp.net
    tls:
      mode: PASSTHROUGH
