egress-external-https-proxy-integration/tls-passthrough-mtls/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-via-egress-gateway
spec:
  hosts:
  - external-app.corp.net
  gateways:
  - istio-egressgateway
  - mesh
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - external-app.corp.net
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - external-app.corp.net
    route:
    - destination:
        host: external-app.corp.net
        port:
          number: 443
